src/css/main.css
/* ================================= 
  Base Element Styles
==================================== */
* {
    font-family: Arial, Helvetica, sans-serif;
    box-sizing: border-box;
}

body {
	line-height: 1.6;
    color: #3a3a3a;
}

ul {
    padding-left: 0;
}

li {
    list-style-type: none;
    font-weight: bold;
}

a { 
	text-decoration: none;
}

h2 {
    color: #0B4E88;
}

/* ================================= 
  Base Layout Styles
==================================== */

/* ---- Navigation ---- */

#name {
    font-size: 150%;
}

#name,
#nav li {
    text-align: center;
    background: white;
    margin-top: 6px;
    margin-bottom: 6px;
}

#name a {
    color: #0B4E88;
}

#nav a {
    color: #0B4E88;
}

#name a,
#nav a {
    padding: 10px 15px;
    display: block;
}

#nav a:hover {
    color: #A149DB;
}


/* ---- Layout Containers ---- */

.container {
    padding-left: 1em;
    padding-right: 1em;
}

#header {
	background: #3acec2;
    padding: 1em 0;
    /* text-align: center; */
}

#wrap {
    min-height: calc(100vh - 57px);  /* 100 percent view-port height */
}

#footer {
    text-align: center;
    margin-top: 30px;
	padding: 1em 0;
	background: #d9e4ea;
}

#image1 {
    width: 85%;
    margin: 0 auto;
}

/* ================================= 
  Media Query Styles
==================================== */

/*  The following styles work
    when the view-port width 
    is larger than 769px    */
@media (min-width: 769px) {
    .container {
        width: 85%;
        max-width: 1150px;
        margin: 0 auto;
    }

    /* #name,
    #nav,
    #nav li{
        display: inline-block;
    } */

    /* #name {
        width: 240px;
        margin-right: 50px;
    } */
    #name {
        float: left;
        margin-top: 20px;
        margin-bottom: 20px;
    }

    #nav {    
        float: right;
        margin-top: 20px;
        margin-bottom: 20px;
        margin-right: 5px;
    }

    #nav li {
        float: left;
        padding-left: 10px;
        padding-right: 10px;
    }

    #name,
    #nav li {
        background: none;
    }

    /* .column {
        display: inline-block;
        width: 50%;
        margin-right: -5px;
        vertical-align: top;
        padding-left: 1em;
        padding-right: 1em;
    } */

    #image1 {
        width: 300px;
        float: left;
        margin-right: 20px;
        margin-top: 20px;
        margin-bottom: 20px;
        padding: 10px;
        border: 1px solid lightgray;
    }

    .clearfix::after {
        content: "";
        display: table;
        clear: both;
    }

}

